--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,8 +326,27 @@ footer a {
     }
 
     #videoUTube, #sezioneUno{
-        width: 49%;
+        width: 47%;
         display: inline-block;
+    }
+
+    iframe {
+        display: inline-block;
+        width: 47%;
+        height: 165px;
+    }
+    section{
+        display: inline-block;
+        width: 47%;
+        vertical-align: top;
+        border-radius: 20px;
+        padding: 1.3%;
+
+#allineamento {
+        display: inline-block;
+        width: 100%;
+        margin: auto;
+        padding-left: 7%;
     }
 
 }
